--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+    border: 0;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    box-sizing:border-box
+}
+html, body { height: 100%; width: 100%; }
+
+:root {
+    --main-color: rgb(83, 83, 253);;
+    --main-text-color: #fff;
+    --border-color: #999;
+
+}
+
+
