--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -8,6 +8,23 @@
 
 }
 
+.loading {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.loading img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
 .container-chat {
     height: 90%;
     width: 70%;
