--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,65 +1,74 @@
-<div class="container">
-    <div class="container-chat">
-        <!-- <div class="container-usuarios">
-            <div class="header">
-                <div class="pesquisa">
-                    <ion-icon class="icones" name="search"></ion-icon>
-                    <input type="text">
+<ng-template #loading>
+<div class="loading">
+    <img src="/assets/img/loading.jpg" alt="carregando">
+    <p>carregando...</p>
+</div>
+</ng-template>
+<ng-template #messageAvailable>
+    <div class="container">
+        <div class="container-chat">
+            <!-- <div class="container-usuarios">
+                <div class="header">
+                    <div class="pesquisa">
+                        <ion-icon class="icones" name="search"></ion-icon>
+                        <input type="text">
+                    </div>
+    
+                    <ion-icon class="icones" name="ellipsis-vertical"></ion-icon>
+    
                 </div>
-
-                <ion-icon class="icones" name="ellipsis-vertical"></ion-icon>
-
-            </div>
-
-            <div class="listagem-usuarios">
-
-                <div class="usuario" *ngFor="let info of informacoes">
+    
+                <div class="listagem-usuarios">
+    
+                    <div class="usuario" *ngFor="let info of informacoes">
+                        <ion-icon class="foto-usuario" name="person-circle"></ion-icon>
+                        <p class="nome-usuario"> {{info.id +" : "+ info.host}} </p>
+                    </div>
+    
+                    
+                </div>
+    
+            </div> -->
+            <div class="container-mensagens">
+                <div class="header-mensagem">
                     <ion-icon class="foto-usuario" name="person-circle"></ion-icon>
-                    <p class="nome-usuario"> {{info.id +" : "+ info.host}} </p>
+                    <h3>{{usuario.nome + " (você)"}}</h3>
+    
                 </div>
-
-                
-            </div>
-
-        </div> -->
-        <div class="container-mensagens">
-            <div class="header-mensagem">
-                <ion-icon class="foto-usuario" name="person-circle"></ion-icon>
-                <h3>{{usuario.nome + " (você)"}}</h3>
-
-            </div>
-            <div class="mensagens">
-                <!-- <div class="r" *ngFor="let mensagemRecebida of mensagensRecebidas" >
-                    <div  class="recepted-mensagem" >
-                        {{mensagemRecebida.conteudo}}
-                       
-                     </div>
-                     <p class="horario-mensagem">11:24</p>
-                </div> -->
-                <div [ngClass]="{'m': mensagem.type===1, 'r': mensagem.type===2}" *ngFor="let mensagem of mensagens">
-
-                    <div id="mensagem" [ngClass]="{'send-mensagem': mensagem.type===1, 'recepted-mensagem': mensagem.type===2}">
-                        <p class="nome-usuario-mensagem">{{mensagem.type===1? "Você:": mensagem.usuario.nome + ":" }}
-                        </p>
-                        {{mensagem.conteudo}}
-
+                <div class="mensagens">
+                    <!-- <div class="r" *ngFor="let mensagemRecebida of mensagensRecebidas" >
+                        <div  class="recepted-mensagem" >
+                            {{mensagemRecebida.conteudo}}
+                           
+                         </div>
+                         <p class="horario-mensagem">11:24</p>
+                    </div> -->
+                    <div [ngClass]="{'m': mensagem.type===1, 'r': mensagem.type===2}" *ngFor="let mensagem of mensagens">
+    
+                        <div id="mensagem" [ngClass]="{'send-mensagem': mensagem.type===1, 'recepted-mensagem': mensagem.type===2}">
+                            <p class="nome-usuario-mensagem">{{mensagem.type===1? "Você:": mensagem.usuario.nome + ":" }}
+                            </p>
+                            {{mensagem.conteudo}}
+    
+                        </div>
+                        <div class="horario-mensagem">
+                            <p>{{mensagem.horario }}
+                            </p>
+                        </div>
+    
                     </div>
-                    <div class="horario-mensagem">
-                        <p>{{mensagem.horario }}
-                        </p>
-                    </div>
-
+    
                 </div>
-
-            </div>
-            <div class="footer">
-                <div class="envio">
-                    <ion-icon class="icones-message" name="apps-outline"></ion-icon>
-                    <input type="text" placeholder="Digite uma mensagem..." [(ngModel)]="mensagem.conteudo"
-                        (keypress)="enviarMensagem($event)">
-                    <ion-icon class="icones-message" (click)="enviarMensagemClicando()" name="send"></ion-icon>
+                <div class="footer">
+                    <div class="envio">
+                        <ion-icon class="icones-message" name="apps-outline"></ion-icon>
+                        <input type="text" placeholder="Digite uma mensagem..." [(ngModel)]="mensagem.conteudo"
+                            (keypress)="enviarMensagem($event)">
+                        <ion-icon class="icones-message" (click)="enviarMensagemClicando()" name="send"></ion-icon>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</ng-template>
+<ng-container *ngTemplateOutlet="connection? messageAvailable : loading "></ng-container>
