--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -5,25 +5,8 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(47, 48, 49);
-
 }
 
-.loading {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
-}
-
-.loading img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
 
 .container-chat {
     height: 90%;
@@ -36,8 +19,6 @@
     border-bottom-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-
-
 }
 
 .container-usuarios {
@@ -165,19 +146,41 @@
     padding: 20px;
     justify-content: flex-start;
     color: var(--main-color);
-
-
 }
 
 .mensagens {
-
     height: calc(100% - 80px);
     overflow-y: auto;
-   
+}
+
+.player-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: 35px;
+    background-color: transparent;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.button-play-pause {
+   background-color: transparent;
+   margin-right: 10px;
+}
+
+.icons-player{
+    font-size: 24px;
+    color: white;
+}
+
+.timeline {
+    border: none;
 }
 
 .footer {
-    
+
     height: 50px;
     border-top: 2px solid var(--main-color);
     display: flex;
@@ -186,7 +189,7 @@
     justify-content: center;
     color: var(--main-text-color);
     padding: 10px 10px;
-    
+
 }
 
 .envio {
@@ -210,12 +213,56 @@
 
 }
 
+.audio {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    padding: 15px;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    outline: 0;
+    font-size: 15px;
+    color: var(--main-color);
+}
+
+.icones-envio {
+    font-size: 22px;
+    cursor: pointer;
+    color: var(--main-text-color);
+    border: 1px solid var(--main-color);
+    border-radius: 50%;
+    padding: 5px;
+    background-color: var(--main-color);
+
+}
+
+.icones-gravacao{
+    font-size: 15px;
+    cursor: pointer;
+    color: rgb(248, 0, 0);
+    border: 1px solid  rgb(247, 0, 0);
+    border-radius: 50%;
+    padding: 5px;
+    background-color: rgb(255, 137, 137);
+}
+.icones-envio-audio {
+    font-size: 22px;
+    cursor: pointer;
+    color: var(--main-text-color);
+    border-radius: 50%;
+    padding: 5px;
+    border: 1px solid rgb(241, 0, 0);
+    background-color: rgb(241, 0, 0);
+}
+
 .icones-message {
     font-size: 30px;
     cursor: pointer;
     color: var(--main-color);
-   
 }
+
+
 
 .send-mensagem {
     display: flex;
@@ -230,7 +277,7 @@
     max-width: 300px;
     background-color: var(--main-color);
     color: var(--main-text-color);
-    padding:  10px;
+    padding: 10px;
     border-radius: 15px;
 }
 
@@ -259,6 +306,7 @@
     border-radius: 15px;
 
 }
+
 .r {
     display: flex;
     align-items: flex-start;
@@ -270,23 +318,23 @@
     color: var(--main-color);
     margin: 0 10px;
     font-size: 10px;
-   
-    
+
+
 }
 
-.nome-usuario-mensagem{
-   font-size: 12px;
-   color: var(--main-text-color);
+.nome-usuario-mensagem {
+    font-size: 12px;
+    color: var(--main-text-color);
 }
 
-@media(max-width:678px){
+@media(max-width:678px) {
     .container-mensagens {
         display: flex;
         flex-direction: column;
         background-color: var(--main-text-color);
         height: 100%;
         width: 100%;
-        
+
     }
 
     .container-chat {
